--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section id="user-goals">
       <h2>My course goals</h2>
-      <input type="text" />
+      <input type="text" v-model="enteredGoalValue" />
       <button>Add Goal</button>
       <p v-if="goals.length === 0">
         No goals have been added yet - please start adding some!
