--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="user-goals">
       <h2>My course goals</h2>
       <input type="text" v-model="enteredGoalValue" />
-      <button>Add Goal</button>
+      <button @click="addGoal">Add Goal</button>
       <p v-if="goals.length === 0">
         No goals have been added yet - please start adding some!
       </p>
