--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         No goals have been added yet - please start adding some!
       </p>
       <ul v-else>
-        <li v-for="goal in goals">{{goal}}</li>
+        <li v-for="(goal, index) in goals">{{goal}}</li>
       </ul>
     </section>
   </body>
