Add keyup.enter to the input
It will execute addGoal method by pressing Enter key.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section id="user-goals">
       <h2>My course goals</h2>
-      <input type="text" v-model="enteredGoalValue" />
+      <input type="text" v-model="enteredGoalValue" @keyup.enter="addGoal" />
       <button @click="addGoal">Add Goal</button>
       <p v-if="goals.length === 0">
         No goals have been added yet - please start adding some!
